--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,14 +3,14 @@ import "@/styles/globals.css";
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <title>Astro Basics</title>
   </head>
-  <body>
+  <body class="dark">
     <slot />
   </body>
 </html>
@@ -18,8 +18,11 @@ import "@/styles/globals.css";
 <style>
   html,
   body {
-    margin: 0;
-    width: 100%;
-    height: 100%;
+    width: 65ch;
+    margin-inline: auto;
+
+    display: grid;
+    justify-content: center;
+    align-items: center;
   }
 </style>
