add Proyects component, define ProyectType, and update layout styles

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,12 +15,12 @@ import "@/styles/globals.css";
   </body>
 </html>
 
-<style>
+<style is:global>
   html,
   body {
     width: 65ch;
     margin-inline: auto;
-
+    gap: 5rem 0;
     display: grid;
     justify-content: center;
     align-items: center;
