--- a/src/components/Proyects.astro
+++ b/src/components/Proyects.astro
@@ -1,6 +1,7 @@
 ---
 import type { ProyectType } from "@/types/Proyect";
 import GithubSvg from "@/svg/github.svg";
+import SpotlightCard from "@/components/Card/SpotlightCard";
 
 const projects: ProyectType[] = [
   {
@@ -63,15 +64,24 @@ const projects: ProyectType[] = [
   <section class="w-full space-y-28">
     {
       projects.map((proyect) => (
-        <article class="border rounded-lg overflow-hidden">
+        <article
+          class={`border  rounded-lg card  overflow-hidden  to-80% backdrop-blur-3xl group/card`}
+        >
+          {/* <SpotlightCard client:load className="  bg-transparent"> */}
           <a href={proyect.link} target="_blank">
             <img
               src={`https://acbc.dev/${proyect.img}`}
-              class="rounded-lg overflow-hidden aspect-video hover:scale-105 duration-200"
+              class="rounded-lg overflow-hidden  "
               alt={proyect.name}
             />
           </a>
-          <main class="text-start p-5  ">
+          {/* 
+              
+              className="custom-spotlight-card"
+              spotlightColor="rgba()"
+            
+            spotlightColor="rgba(0, 229, 255, 0.2)"/*/}
+          <main class="text-start p-5 group-hover/card:bg-gradient-to-t from-background transition-all duration-500">
             <div class="flex  justify-between items-center">
               <h3 class="text-2xl font-bold  py-2">{proyect.name}</h3>
               <div class="flex justify-center gap-x-2">
@@ -80,10 +90,16 @@ const projects: ProyectType[] = [
             </div>
             <p>{proyect.description}</p>
           </main>
+          {/* </SpotlightCard> */}
         </article>
       ))
     }
   </section>
 </section>
 
-<style></style>
+<style>
+  .card {
+    display: grid;
+    grid-template-rows: 200px 1fr;
+  }
+</style>
