--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,6 +18,7 @@ import "@/styles/globals.css";
 <style is:global>
   html,
   body {
+    background-color: #020308;
     width: 65ch;
     margin-inline: auto;
     gap: 5rem 0;
