add Footer, Bg, Proyect, and Skills components; enhance Hero styles and layout

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -6,7 +6,9 @@ import LinkedinSvg from "@/svg/linkedin.svg";
 
 <section class="mt-20 flex flex-col gap-y-5">
   <header>
-    <h1 class="text-4xl font-bold">Hi<br /> I'm a Camilo Blandon</h1>
+    <h1 class="text-4xl font-bold">
+      Hi<br /> I'm a Camilo Blandon
+    </h1>
   </header>
   <p class="text-muted-foreground">
     I'm a passionate frontend programming student. I create exceptional web
@@ -17,14 +19,14 @@ import LinkedinSvg from "@/svg/linkedin.svg";
   </p>
 
   <footer class="flex gap-x-2">
-    <Button className="btn">
+    <Button className="btn hover:scale-110 transition-all">
       <a
         href="https://www.linkedin.com/in/acbc-dev/"
         class="inline-flex gap-x-1"
         >Linkedin <LinkedinSvg class="fill-white" /><a> </a>
       </a>
     </Button>
-    <Button className="btn">
+    <Button className="btn hover:scale-110 transition-all">
       <a class="inline-flex gap-x-1" href="https://github.com/acbcdev"
         >GitHub <GithubSvg /></a
       >
