--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,21 @@
 ---
+import Layout from "@/layouts/Layout.astro";
+import Bg from "@/components/Bg.astro";
 import Hero from "@/components/Hero.astro";
 import Proyects from "@/components/Proyects.astro";
-import Layout from "@/layouts/Layout.astro";
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import Skills from "@/components/Skills.astro";
+import Footer from "@/components/Footer.astro";
 ---
 
 <Layout>
-  <Hero />
-  <Proyects />
+  <Bg>
+    <Hero />
+    <Proyects />
+  </Bg>
+  <Skills />
+  <!-- <Bg>
+    <Footer />
+  </Bg> -->
 </Layout>
+
+<style></style>
