refactor Hero and Proyect components for improved layout and readability; remove Embla carousel implementation

--- a/src/components/Proyect.astro
+++ b/src/components/Proyect.astro
@@ -17,7 +17,7 @@ const { link, img, name, description, github } = Astro.props;
   class="border embla__slide rounded-lg card backdrop-blur-sm overflow-hidden group/card"
 >
   <a href={link} target="_blank">
-    <img src={img} class="overflow-hidden" alt={name} />
+    <img src={img} class="overflow-hidden aspect-video" alt={name} />
   </a>
 
   <main
