--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -4,19 +4,24 @@ import GithubSvg from "@/svg/github.svg";
 import LinkedinSvg from "@/svg/linkedin.svg";
 ---
 
-<section class="mt-20 flex flex-col gap-y-5">
+<section class="my-10 flex flex-col gap-y-5">
   <header>
     <h1 class="text-4xl font-bold">
       Hi<br /> I'm a Camilo Blandon
     </h1>
   </header>
-  <p class="text-muted-foreground">
-    I'm a passionate frontend programming student. I create exceptional web
-    experiences using technologies like React, Next.js, and more. My thirst for
-    learning is infinite, and I'm also fascinated by artificial intelligence. In
-    constant evolution, I'm always ready to embrace new technologies and
-    challenges. Never stop learning!
-  </p>
+  <section class="text-muted-foreground">
+    <p>I'm a passionate frontend programming student.</p>
+    <p>
+      I create exceptional web learning is infinite, and I'm also fascinated by
+      artificial intelligence. experiences using technologies like React,
+      Next.js, and more. My thirst for
+    </p>
+    <p>
+      In constant evolution, I'm always ready to embrace new technologies and
+      challenges. Never stop learning!
+    </p>
+  </section>
 
   <footer class="flex gap-x-2">
     <Button className="btn hover:scale-110 transition-all">
