--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,7 +12,7 @@ import "@/styles/globals.css";
     <title>Astro Basics</title>
   </head>
   <body class="dark">
-    <div class="grid place-content-center">
+    <div class="flex flex-col items-center justify-between min-h-screen">
       <slot />
     </div>
   </body>
@@ -24,7 +24,6 @@ import "@/styles/globals.css";
   }
   html,
   body {
-    max-width: 80ch;
     font-family:
       system-ui,
       -apple-system,
@@ -37,6 +36,5 @@ import "@/styles/globals.css";
       "Open Sans",
       "Helvetica Neue",
       sans-serif;
-    margin-inline: auto;
   }
 </style>
