--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,11 +8,14 @@ import Footer from "@/components/Footer.astro";
 ---
 
 <Layout>
-  <Bg>
-    <Hero />
-    <Proyects />
-  </Bg>
-  <Skills />
+  <main class="mx-auto space-y-6 max-w-[70ch] w-full">
+    <Bg>
+      <Hero />
+      <Proyects />
+    </Bg>
+    <Skills />
+  </main>
+
   <!-- <Bg>
     <Footer />
   </Bg> -->
