refactor index layout to use max-w-prose for improved readability

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import Footer from "@/components/Footer.astro";
 ---
 
 <Layout>
-  <main class="mx-auto space-y-6 max-w-[70ch] w-full">
+  <main class="mx-auto space-y-6 max-w-prose w-full">
     <Bg>
       <Hero />
       <Proyects />
