refactor Hero component layout for improved responsiveness and alignment

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -4,7 +4,9 @@ import GithubSvg from "@/svg/github.svg";
 import LinkedinSvg from "@/svg/linkedin.svg";
 ---
 
-<section class="my-10 flex flex-col gap-y-5">
+<section
+  class="my-10 flex flex-col px-4 md:px-10 items-start justify-center gap-y-5"
+>
   <header>
     <h1 class="text-4xl font-bold">
       Hi<br /> I'm a Camilo Blandon
