--- a/src/components/Proyect.astro
+++ b/src/components/Proyect.astro
@@ -24,7 +24,7 @@ const { link, img, name, description, github } = Astro.props;
     class="text-start px-3 before:bg-radial before:from-primary/10 py-2 h-full duration-200"
   >
     <div class="flex justify-between items-center">
-      <h3 class="text-2xl font-bold py-2">{name}</h3>
+      <h3 class="text-lg md:text-xl xl:text-2xl font-bold py-2">{name}</h3>
       <div class="flex justify-center gap-x-2">
         <a href={github} target="_blank">
           <GithubSvg class="size-4" />
@@ -34,7 +34,7 @@ const { link, img, name, description, github } = Astro.props;
         </a>
       </div>
     </div>
-    <p class="text-primary/70">{description}</p>
+    <p class="text-primary/70 text-xs md:text-base">{description}</p>
   </main>
 </article>
 <style>
