refactor Layout component for improved structure and centering

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,10 +11,8 @@ import "@/styles/globals.css";
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <title>Astro Basics</title>
   </head>
-  <body class="dark">
-    <div class="flex flex-col items-center justify-between min-h-screen">
-      <slot />
-    </div>
+  <body class="w-[100%] md:w-[60%] mx-auto grid place-content-center">
+    <slot />
   </body>
 </html>
 
