refactor index.astro to improve layout structure and remove commented code

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,17 +8,17 @@ import Footer from "@/components/Footer.astro";
 ---
 
 <Layout>
-  <main class="mx-auto space-y-6 max-w-prose w-full">
-    <Bg>
-      <Hero />
-      <Proyects />
-    </Bg>
-    <Skills />
-  </main>
+  <!-- <main class="mx-auto space-y-6 max-w-prose w-full"> -->
+  <Bg>
+    <Hero />
+    <Proyects />
+  </Bg>
+  <Skills />
+  <!-- </main> -->
 
   <!-- <Bg>
     <Footer />
   </Bg> -->
 </Layout>
 
-<style></style>
+<!-- <style></style> -->
