--- a/src/components/Bg.astro
+++ b/src/components/Bg.astro
@@ -12,11 +12,9 @@
       height: 100%;
       left: -50%;
       border-radius: 50%;
-      background-image: linear-gradient(
-          rgba(255, 255, 255, 0.03) 1px,
-          transparent 1px
-        ),
-        linear-gradient(90deg, rgba(255, 255, 255, 0.03) 1px, transparent 1px);
+      background-image:
+        linear-gradient(rgba(255, 255, 255, 0.03) 1px, transparent 1px),
+        linear-gradient(90deg, rgba(255, 255, 255, 0.09) 1px, transparent 1px);
       background-size: 40px 40px;
       mask-image: radial-gradient(
         circle at 50% 50%,
