--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,8 +1,13 @@
-<h3 class="mt-10 p-0">Camilo Blandon</h3>
-<h4>Hecho con 💜 by ACBC</h4>
+<h3 class="mx-auto my-5">made with 💜 by ACBC</h3>
 <style>
   h3 {
-    position: sticky;
-    bottom: 0;
+    position: relative;
+    /* &::before {
+      content: "Camilo Blandon";
+      position: absolute;
+      width: 200%;
+      height: 200%;
+      inset: 0;
+    } */
   }
 </style>
