--- a/src/components/Proyects/Proyects.astro
+++ b/src/components/Proyects/Proyects.astro
@@ -3,13 +3,183 @@ import Card from "./Card.astro";
 import WWW from "@/svg/www.svg";
 import { projects } from "./const";
 import Title from "../Title.astro";
+import ChevronRight from "@/svg/chevron-right.svg";
+import ChevronLeft from "@/svg/chevron-left.svg";
+import { Button } from "../ui/button";
 ---
 
-<section class="space-y-6 mb-10 px-4 md:px-10 grid place-content-center">
+<section class="space-y-4 mb-10 px-4 md:px-10 grid place-content-center">
   <Title>
     <WWW /> Projects
   </Title>
-  <section class="grid gap-x-3 gap-y-4 md:grid-cols-2">
+
+  <section class="container" id="container">
     {projects.map((proyect) => <Card {...proyect} />)}
   </section>
+  <section class="flex justify-around items-center gap-x-2">
+    <div class="dots">
+      {
+        projects.map((_, index) => (
+          <div class={`dot ${index === 0 ? "active" : ""}`} />
+        ))
+      }
+    </div>
+    <div>
+      <Button id="prev" className="rounded-full" size={"icon"}
+        ><ChevronLeft /></Button
+      >
+
+      <Button id="next" className="rounded-full" size={"icon"}
+        ><ChevronRight /></Button
+      >
+    </div>
+  </section>
+  <script>
+    import { $, $$ } from "@/lib/utils";
+    const container = $("container");
+    const cards = $$(".card");
+    const dots = $$(".dot");
+    const prev = $<HTMLButtonElement>("#prev");
+    const next = $<HTMLButtonElement>("#next");
+    let currentIndex = 0;
+
+    const observer = new IntersectionObserver(
+      (entries) => {
+        entries.forEach((entry) => {
+          if (entry.isIntersecting) {
+            const newIndex = Array.from(cards).indexOf(entry.target);
+            if (newIndex !== currentIndex) {
+              dots[currentIndex].classList.remove("active");
+              dots[newIndex].classList.add("active");
+              currentIndex = newIndex;
+              disableBtns();
+            }
+          }
+        });
+      },
+      {
+        root: container,
+        threshold: 0.5,
+      }
+    );
+
+    cards.forEach((card) => observer.observe(card));
+    dots.forEach((dot, i) =>
+      dot.addEventListener("click", () => {
+        scrollToSection(i);
+      })
+    );
+    function scrollToSection(index: number) {
+      if (index >= 0 && index < cards.length) {
+        cards[index].scrollIntoView({
+          behavior: "smooth",
+          inline: "center",
+          block: "center",
+        });
+      }
+    }
+
+    function scrollNext() {
+      scrollToSection(currentIndex + 1);
+    }
+
+    function scrollPrev() {
+      scrollToSection(currentIndex - 1);
+    }
+    function disableBtns() {
+      if (currentIndex === 0 && prev) {
+        prev.disabled = true;
+        return;
+      }
+      if (currentIndex === cards.length - 1 && next) {
+        next.disabled = true;
+        return;
+      }
+      if (prev && next) {
+        prev.disabled = false;
+        next.disabled = false;
+      }
+    }
+    container?.addEventListener("scroll", disableBtns);
+    prev?.addEventListener("click", scrollPrev);
+    next?.addEventListener("click", scrollNext);
+  </script>
 </section>
+
+<style>
+  .container {
+    max-width: 100%;
+    animation-timeline:;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    display: flex;
+    gap: 1.5rem;
+    padding-inline: 5rem;
+    padding-block: 1rem;
+    scrollbar-width: none;
+    .card {
+      /* view-timeline-name: --scroll;
+      view-timeline-axis: inline;
+      animation: linear fadeIn both;
+      animation-timeline: --scroll;
+      animation-range: entry 20% cover 120%;
+      display: inline-flex;
+      flex-direction: column;
+      justify-content: center; */
+      animation: fadeIn linear both;
+      animation-timeline: view(x);
+      animation-range: entry 20% cover 40%;
+    }
+  }
+
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+      scale: 0.5;
+      filter: blur(4px);
+    }
+    80% {
+      filter: blur(0);
+    }
+    to {
+      opacity: 1;
+      scale: 1;
+    }
+  }
+  /* @keyframes fadeIn {
+    0%,
+    100% {
+      opacity: 0;
+      scale: 0.5;
+      filter: blur(4px);
+    }
+    50% {
+      opacity: 1;
+      scale: 1;
+      filter: blur(0);
+    }
+  } */
+  .dots {
+    bottom: 60px;
+    left: 50%;
+    display: flex;
+    gap: 8px;
+  }
+
+  .dot {
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background: rgba(255, 255, 255, 0.5);
+    transition: 0.3s;
+    &:hover {
+      cursor: pointer;
+      background: white;
+    }
+  }
+
+  .dot.active {
+    background: white;
+    transform: scale(1.2);
+  }
+</style>
