--- a/src/components/Proyects/Card.astro
+++ b/src/components/Proyects/Card.astro
@@ -14,7 +14,7 @@ const { link, img, name, description, github } = Astro.props;
 ---
 
 <article
-  class="border-2 card rounded-lg border-border backdrop-blur-3xl overflow-hidden group/card"
+  class="card rounded-lg border-border backdrop-blur-3xl overflow-hidden group/card"
 >
   <a href={link} target="_blank" draggable="false">
     <img
@@ -67,33 +67,10 @@ const { link, img, name, description, github } = Astro.props;
     scroll-snap-align: center;
     flex: 0 0 85%;
   }
+
   @media (max-width: 480px) {
     .card {
       flex: 0 0 100%;
     }
-  }
-  .card-spotlight {
-    /* position: relative; */
-    /* overflow: hidden; */
-    --mouse-x: 50%;
-    --mouse-y: 50%;
-    --spotlight-color: rgba(255, 255, 255, 0.05);
-  }
-
-  .card-spotlight::before {
-    content: "";
-    position: absolute;
-    inset: 0;
-    background: radial-gradient(
-      circle at var(--mouse-x) var(--mouse-y),
-      var(--spotlight-color),
-      transparent 80%
-    );
-    pointer-events: none;
-  }
-
-  .card-spotlight::before,
-  .card-spotlight::before {
-    opacity: 0.65;
   }
 </style>
