refactor: update Proyects component for improved readability and adjust animation range

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from "@/layouts/Layout.astro";
-import Bg from "@/components/Bg.astro";
+import Background from "@/components/Background.astro";
 import Hero from "@/components/Hero.astro";
 import Proyects from "@/components/Proyects/Proyects.astro";
 import Skills from "@/components/Skills.astro";
@@ -11,10 +11,10 @@ import Footer from "@/components/Footer.astro";
   title="Camilo Blandon | Frontend Developer - Portfolio"
   description="Descubre el portafolio de Camilo Blandon, Frontend Developer con experiencia en desarrollo web y aplicaciones modernas."
 >
-  <Bg>
+  <Background>
     <Hero />
     <Proyects />
-  </Bg>
+  </Background>
   <Skills />
   <Footer />
 </Layout>
