--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,10 @@
 ---
 import Layout from "@/layouts/Layout.astro";
 import Background from "@/components/Background.astro";
-import Hero from "@/components/Hero.astro";
-import Proyects from "@/components/Proyects/Proyects.astro";
-import Skills from "@/components/Skills.astro";
-import Footer from "@/components/Footer.astro";
+import Hero from "@/sections/Hero.astro";
+import Proyects from "@/sections/Proyects.astro";
+import Skills from "@/sections/Skills.astro";
+import Footer from "@/sections/Footer.astro";
 ---
 
 <Layout
