refactor: enhance Hero section content and improve button hover effects

--- a/src/sections/Hero.astro
+++ b/src/sections/Hero.astro
@@ -13,15 +13,13 @@ import LinkedinSvg from "@/svg/linkedin.svg";
     </h1>
   </header>
   <section class="text-muted-foreground">
-    <p>I'm a passionate frontend programming student.</p>
     <p>
-      I create exceptional web learning is infinite, and I'm also fascinated by
-      artificial intelligence. experiences using technologies like React,
-      Next.js, and more. My thirst for
-    </p>
-    <p>
-      In constant evolution, I'm always ready to embrace new technologies and
-      challenges. Never stop learning!
+      I'm a frontend programming student with a strong passion for web
+      development. I specialize in technologies like React, Next.js, and more,
+      with a keen interest in artificial intelligence. Always eager to learn, I
+      embrace new challenges and stay up to date with the latest industry
+      trends. My focus is on building intuitive and high-performing web
+      applications while continuously improving my skills.
     </p>
   </section>
 
@@ -56,10 +54,11 @@ import LinkedinSvg from "@/svg/linkedin.svg";
     border: 1px solid rgba(58, 57, 59, 0.1);
     border: 1px solid rgba(58, 57, 59, 0.1);
     backdrop-filter: blur(60px);
+    box-shadow:
+      0 0 20px rgba(54, 53, 56, 0.15),
+      inset 0 0 20px rgba(130, 71, 229, 0.05);
     &:hover {
-      box-shadow:
-        0 0 20px rgba(54, 53, 56, 0.15),
-        inset 0 0 20px rgba(130, 71, 229, 0.05);
+      scale: 1.1;
     }
   }
 </style>
