refactor: add responsive padding to Proyects section container

--- a/src/sections/Proyects.astro
+++ b/src/sections/Proyects.astro
@@ -13,7 +13,7 @@ import { Button } from "@/components/ui/button";
     <WWW /> Projects
   </Title>
 
-  <section class="container" id="container">
+  <section class="container md:px-10" id="container">
     {projects.map((proyect) => <Card {...proyect} />)}
   </section>
   <section class="flex justify-around items-center gap-x-2">
