--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,7 +7,7 @@ type Props = {
   image?: string;
   canonical?: string;
 };
-const { title, description, image = "/img/og.webp", canonical } = Astro.props;
+const { title, description, image = "/og.jpg", canonical } = Astro.props;
 ---
 
 <!doctype html>
