refactor: update Footer section layout and add inspiration link

--- a/src/sections/Footer.astro
+++ b/src/sections/Footer.astro
@@ -1,4 +1,13 @@
-<h3 class="mx-auto my-5">made with 💜 by ACBC</h3>
+<footer class="flex items-center justify-around my-3">
+  <h3>made with 💜 by ACBC</h3>
+  <a
+    class="underline"
+    target="_blank"
+    href="https://x.com/educalvolpz/status/1866883202045882540"
+    >Inspired on
+  </a>
+</footer>
+
 <style>
   h3 {
     position: relative;
