--- a/src/components/Background.astro
+++ b/src/components/Background.astro
@@ -26,11 +26,11 @@
     }
   }
 </style> -->
-<canvas id="backgroundCanvas" class="fixed inset-0 -z-10"></canvas>
+<canvas id="backgroundCanvas" class="fixed inset-0 -z-10"> </canvas>
 <slot />
 <script>
   const canvas = document.getElementById(
-    "backgroundCanvas",
+    "backgroundCanvas"
   ) as HTMLCanvasElement;
   const ctx = canvas.getContext("2d");
 
@@ -53,7 +53,7 @@
       0,
       canvas.width / 2,
       0,
-      canvas.height,
+      canvas.height
     );
     gradient.addColorStop(0, "rgba(255, 255, 255, 0.15)"); // Luz sutil
     gradient.addColorStop(1, "rgba(255, 255, 255, 0)"); // Transparente
@@ -84,3 +84,17 @@
 
   init();
 </script>
+<!-- <div class="light">
+  <slot />
+</div>
+<style>
+  .light {
+    top: 0;
+    z-index: -1;
+    width: 100%;
+    background-image: url("../assets/light.png");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+</style> -->
