--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,8 +23,10 @@ const { title, description, image = "/og.jpg", canonical } = Astro.props;
       canonical={canonical}
     />
   </head>
-  <body class="w-[100%] md:w-[60%] mx-auto grid place-content-center">
-    <slot />
+  <body class="">
+    <div class="w-[100%] md:w-[45%] mx-auto grid place-content-center">
+      <slot />
+    </div>
   </body>
 </html>
 
@@ -46,5 +48,20 @@ const { title, description, image = "/og.jpg", canonical } = Astro.props;
       "Open Sans",
       "Helvetica Neue",
       sans-serif;
+    position: relative;
+    /* &::before {
+      content: "";
+      top: 0;
+      left: 0;
+      z-index: -1;
+      width: 100%;
+      height: 100%;
+      position: absolute;
+
+      background-image: url("/bg.png");
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+    } */
   }
 </style>
