--- a/src/sections/Proyects.astro
+++ b/src/sections/Proyects.astro
@@ -8,7 +8,7 @@ import ChevronLeft from "@/svg/chevron-left.svg";
 import { Button } from "@/components/ui/button";
 ---
 
-<section class="space-y-4 mb-10 px-4 md:px-10 grid place-content-center">
+<section class="space-y-4 my-10 px-4 md:px-10 grid place-content-center">
   <Title>
     <WWW /> Projects
   </Title>
@@ -55,7 +55,7 @@ import { Button } from "@/components/ui/button";
         entries.forEach((entry) => {
           if (entry.isIntersecting) {
             const newIndex = Array.from(cards).indexOf(
-              entry.target as HTMLElement,
+              entry.target as HTMLElement
             );
             if (newIndex !== currentIndex) {
               dots[currentIndex].classList.remove("active");
@@ -69,14 +69,14 @@ import { Button } from "@/components/ui/button";
       {
         root: container,
         threshold: 0.5,
-      },
+      }
     );
 
     cards.forEach((card) => observer.observe(card));
     dots.forEach((dot, i) =>
       dot.addEventListener("click", () => {
         scrollToSection(i);
-      }),
+      })
     );
     function scrollToSection(index: number) {
       if (index >= 0 && index < cards.length) {
