refactor: adjust margin in Skills section for improved layout

--- a/src/sections/Skills.astro
+++ b/src/sections/Skills.astro
@@ -23,7 +23,7 @@ export const SkillsICons: skillType[] = [
 ];
 ---
 
-<section class="grid gap-10 px-4 md:px-10 mb-10">
+<section class="grid gap-10 my-10 px-4 md:px-10 mb-10">
   <Title>
     <Brain /> Skills
   </Title>
