refactor: update Hero section description for clarity and focus on performance

--- a/src/sections/Hero.astro
+++ b/src/sections/Hero.astro
@@ -14,14 +14,14 @@ import LinkedinSvg from "@/svg/linkedin.svg";
   </header>
   <section class="text-muted-foreground">
     <p>
-      I'm a frontend programming student with a strong passion for web
-      development. I specialize in technologies like React, Next.js, and more,
-      with a keen interest in artificial intelligence. Always eager to learn, I
-      embrace new challenges and stay up to date with the latest industry
-      trends. My focus is on building intuitive and high-performing web
-      applications while continuously improving my skills.
+      I'm a frontend developer with a strong passion for building scalable and
+      high-quality applications using modern technologies like React, Next.js,
+      and TypeScript. I focus on performance optimization, responsive design,
+      and writing maintainable code to deliver robust and efficient solutions. I
+      am always eager to learn new technologies and take on challenging projects
+      while adapting to diverse work environments.
     </p>
-  </section>
+  </section>s
 
   <footer class="flex gap-x-2">
     <Button className="btn">
