fix: correct closing tag in Hero section

--- a/src/sections/Hero.astro
+++ b/src/sections/Hero.astro
@@ -21,7 +21,7 @@ import LinkedinSvg from "@/svg/linkedin.svg";
       am always eager to learn new technologies and take on challenging projects
       while adapting to diverse work environments.
     </p>
-  </section>s
+  </section>
 
   <footer class="flex gap-x-2">
     <Button className="btn">
